Added User and Staff collections
