# models/userModel.js
@@ -1,0 +1,14 @@
+const mongoose = require('mongoose');
+
+const userSchema = new mongoose.Schema(
+  {
+    username: { type: String, unique: true, required: true },
+    email: { type: String, required: true, unique: true },
+    firstName: { type: String, required: true },
+    lastName: { type: String, required: true },
+    role: { type: String, default: 'user' }
+  },
+  { timestamps: true }
+);
+
+module.exports = mongoose.model('User', userSchema);
